; ModuleID = '/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_policy.c_xfrm_policy_inexact_lookup_rcu.c'
source_filename = "/home/carl/AnghaBench/linux/net/xfrm/extr_xfrm_policy.c_xfrm_policy_inexact_lookup_rcu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xfrm_pol_inexact_bin = type { i32 }
%struct.net = type { i32 }
%struct.xfrm_pol_inexact_key = type { i32, i32, i32, i32, i32 }

@xfrm_policy_inexact_table = common dso_local global i32 0, align 4
@xfrm_pol_inexact_params = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.xfrm_pol_inexact_bin* (%struct.net*, i32, i32, i32, i32)* @xfrm_policy_inexact_lookup_rcu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.xfrm_pol_inexact_bin* @xfrm_policy_inexact_lookup_rcu(%struct.net* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.net*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.xfrm_pol_inexact_key, align 4
  store %struct.net* %0, %struct.net** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 0
  store i32 0, i32* %12, align 4
  %13 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 1
  %14 = load i32, i32* %10, align 4
  store i32 %14, i32* %13, align 4
  %15 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 2
  %16 = load i32, i32* %9, align 4
  store i32 %16, i32* %15, align 4
  %17 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 3
  %18 = load i32, i32* %7, align 4
  store i32 %18, i32* %17, align 4
  %19 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 4
  %20 = load i32, i32* %8, align 4
  store i32 %20, i32* %19, align 4
  %21 = getelementptr inbounds %struct.xfrm_pol_inexact_key, %struct.xfrm_pol_inexact_key* %11, i32 0, i32 0
  %22 = load %struct.net*, %struct.net** %6, align 8
  %23 = call i32 @write_pnet(i32* %21, %struct.net* %22)
  %24 = load i32, i32* @xfrm_pol_inexact_params, align 4
  %25 = call %struct.xfrm_pol_inexact_bin* @rhashtable_lookup(i32* @xfrm_policy_inexact_table, %struct.xfrm_pol_inexact_key* %11, i32 %24)
  ret %struct.xfrm_pol_inexact_bin* %25
}

declare dso_local i32 @write_pnet(i32*, %struct.net*) #1

declare dso_local %struct.xfrm_pol_inexact_bin* @rhashtable_lookup(i32*, %struct.xfrm_pol_inexact_key*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
